--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,15 +112,18 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     grid-column: 2/3;
     grid-row: 1/4;
+    z-index: -1;
 }
 
-.image-with-text h4{
+.image-with-text a{
     text-align: left;
     grid-column: 1/3;
     grid-row: 2/3;
     z-index: 2;
 }
-
+.image-with-text a{
+    text-decoration: none;
+}
 .image-with-text h4 span{
     background: #870000;
     padding: 2px;    
@@ -270,4 +273,27 @@ h1, h2, h3, h4, h5, h6 {
 .bosses-body{
     margin-left: 10%;
     margin-right: 10%;
+}
+
+.boss-section {
+    background-color: #c60000;
+    margin: 20px;
+    padding-top: 2.5px;
+}
+
+.stats{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+}
+
+.boss-section .left{
+    text-align: right;
+    padding-right: 17px;
+
+}
+ 
+.stats p{
+    margin: 5px;
+    padding: 3px;
 }
